--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "concurrently": "^3.5.1",
+    "font-awesome": "^4.7.0",
     "json-server": "^0.12.1"
   }
 }
